--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zvuk-dl"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 repository = "https://github.com/skarrok/zvuk-dl-rs"
 license = "MIT"
@@ -8,9 +8,11 @@ license = "MIT"
 [dependencies]
 anyhow = "1.0.89"
 audiotags = "0.5.0"
+chrono = { version = "0.4.38", default-features = false }
 clap = { version = "4.5.18", features = ["derive", "env"] }
 dotenvy = "0.15.7"
 humantime = "2.1.0"
+id3 = "1.14.0"
 metaflac = "0.2.7"
 reqwest = { version = "0.12.7", default-features = false, features = [
         "blocking",
