--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ id3 = "1.14.0"
 metaflac = "0.2.7"
 reqwest = { version = "0.12.7", default-features = false, features = [
         "blocking",
+        "cookies",
         "http2",
         "json",
         "rustls-tls",
