--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,16 @@ missing_errors_doc = "allow"
 missing_panics_doc = "allow"
 must_use_candidate = "allow"
 
+[workspace.metadata.release]
+allow-branch = ["main"]
+publish = false
+pre-release-commit-message = "build: 🔖 release version {{version}}"
+tag-message = "build: 🔖 release version {{version}}"
+pre-release-replacements = [
+  {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
+  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## Unreleased", exactly=1},
+]
+
 # The profile that 'cargo dist' will build with
 [profile.dist]
 inherits = "release"
