--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -38,9 +38,32 @@ jobs:
         with:
           components: clippy,llvm-tools-preview
 
+      - name: Install cargo-llvm-cov
+        uses: taiki-e/install-action@cargo-llvm-cov
+
       - uses: Swatinem/rust-cache@v2
 
-      - name: cargo clippy && cargo test
+      - name: Run clippy
         run: |
           cargo clippy
-          cargo test
+
+      - name: Generate code coverage
+        run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
+
+      - name: Collect coverage
+        uses: coverallsapp/github-action@v2
+        with:
+          file: lcov.info
+          flag-name: run-${{ join(matrix.*, '-') }}
+          parallel: true
+
+  finish:
+    needs: clippy-build-and-test
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    steps:
+    - name: Upload coverage to Coveralls
+      uses: coverallsapp/github-action@v2
+      with:
+        parallel-finished: true
+        carryforward: "run-macos-14,run-ubuntu-24.04,run-windows-latest"
