--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zvuk-dl"
-version = "0.4.0-pre"
+version = "0.4.0"
 edition = "2021"
 repository = "https://github.com/skarrok/zvuk-dl-rs"
 license = "MIT"
