--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,10 @@ supports-color = "3.0.2"
 tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
 tracing = { version = "0.1.41", features = ["log"] }
 
+[dev-dependencies]
+httpmock = "0.8.0"
+tempfile = "3.23.0"
+
 [lints.rust]
 unsafe_code = "forbid"
 
